--- a/index.css
+++ b/index.css
@@ -42,3 +42,29 @@ h1 {
     cursor: not-allowed;
     background-color: #8EE4AF;
 }
+
+#roundList {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#roundTemp {
+    color: #EDF5E1;
+}
+
+table {
+    text-align: center;
+    width: 440px;
+    border: 2px solid #8EE4AF;
+    border-radius: 4px;
+    transition-duration: 0.4s;
+}
+
+table tr:hover {
+    background-color: #8EE4AF;
+}
+
+table tr th:hover {
+    background-color: #379683;
+}
