--- a/index.css
+++ b/index.css
@@ -79,8 +79,15 @@ table tr th:hover {
 
 .countdownDate {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     gap: 10px;
+}
+
+#inputBtn {
+    flex: 0 1 100%;
+    gap: 0px;
 }
 
 .inputCountdown {
